Fixed scrollbar transparency

--- a/src/custom.css
+++ b/src/custom.css
@@ -6,6 +6,7 @@
   -webkit-box-shadow: inset 0 0 4px rgba(160, 159, 159, 0.8);
   box-shadow: inset 0 0 4px rgba(160, 159, 159, 0.8);
   border-radius: 10px;
+  background-color: #fff;
 }
 
 ::-webkit-scrollbar-thumb {
